--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #244A74;
+    background-color: #FFFFE5;
 }
 
 p{
@@ -10,13 +10,14 @@ p{
 
 h1,h2,h3,h4{
     font-family: 'Old Standard TT', serif;
-    color: #8EE181;
+    color: #B8C4CC;
 }
 h1{
     font-size: 4em;
 }
+
 .chart rect{
-    fill: #72D0F5;
+    fill: #B8C4CC;
 }
 .chart text{
     font-family: 'Old Standard TT', serif;
