--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 
+#world {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+
 p{
     font-family: 'Old Standard TT', serif;
     color: #8EE181;
