--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 
-#world {
+#3d {
 	position: absolute;
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
+  z-index: -10
 }
 
 
@@ -20,6 +18,12 @@ h1,h2,h3,h4{
 h1{
     font-size: 2em;
 }
+
+.chart{
+  position:absolute;
+  z-index: 0
+}
+
 
 .chart rect{
 
